Made Carousel Work

--- a/albums/album-style.css
+++ b/albums/album-style.css
@@ -8,15 +8,12 @@
 }
 
 .bg-wrapper {
-  background: rgb(42, 42, 42);
+  background: rgb(206, 132, 120);
   background: linear-gradient(
-    0deg,
-    rgba(42, 42, 42, 1) 0%,
-    rgba(42, 42, 42, 1) 48%,
-    rgba(42, 42, 42, 1) 68%,
-    rgba(104, 22, 76, 1) 100%,
-    rgba(148, 8, 100, 1) 100%,
-    rgba(148, 8, 100, 1) 100%
+    180deg,
+    rgba(206, 132, 120, 1) 0%,
+    rgba(206, 132, 120, 1) 5%,
+    rgba(42, 42, 42, 1) 20%
   );
 }
 
@@ -24,11 +21,12 @@
   height: 250px;
   padding-top: 30px;
   transform: scaleY(1.2);
-  background: rgb(102, 23, 75);
+  background: rgb(206, 132, 120);
   background: linear-gradient(
-    0deg,
-    rgba(102, 23, 75, 1) 0%,
-    rgba(148, 36, 116, 1) 76%
+    180deg,
+    rgb(221, 157, 147) 0%,
+    rgba(206, 132, 120, 1) 55%,
+    rgba(206, 132, 120, 1) 88%
   );
 }
 
