added some style to good morning

--- a/style.css
+++ b/style.css
@@ -452,3 +452,15 @@ button.btn.bg-black {
   margin-right: 25px;
 
 }
+
+@import url('https://fonts.googleapis.com/css?family=Montserrat');
+
+h3{
+  background-image: url(https://media.giphy.com/media/26BROrSHlmyzzHf3i/giphy.gif);
+  background-size: cover;
+  color: transparent;
+  -moz-background-clip: text;
+  -webkit-background-clip: text;
+  text-transform: uppercase;
+  font-size: 50px;
+}
