--- a/artists/artist-style.css
+++ b/artists/artist-style.css
@@ -1,3 +1,16 @@
+@import url('https://fonts.googleapis.com/css?family=Montserrat');
+
+.artist-queen{
+  background-image: url(https://media.giphy.com/media/26BROrSHlmyzzHf3i/giphy.gif);
+  background-size: cover;
+  color: transparent;
+  -moz-background-clip: text;
+  -webkit-background-clip: text;
+  text-transform: uppercase;
+  font-size: 50px;
+}
+
+
 .album-img-container .col-12 {
   padding: 0;
 }
