--- a/profile/profile.css
+++ b/profile/profile.css
@@ -6,7 +6,9 @@
   margin-top: 70px;
   margin-left: 50px;
 } */
-
+body{
+  background-color: #000000;
+}
 .form-control {
   background-color: var(--dark-black);
   border: none;
@@ -18,6 +20,8 @@
 }
 
 .profile-pic {
+  margin-top: -95px;
+  margin-left: 40px;
   height: 200px;
   border-radius: 50%;
 }
