--- a/artists/artist-style.css
+++ b/artists/artist-style.css
@@ -70,27 +70,19 @@
   right: 0;
   bottom: 0;
   left: 0;
-  /* background: rgb(42, 42, 42);
+  background: rgb(42, 42, 42);
   background: linear-gradient(
     180deg,
     rgba(42, 42, 42, 0) 0%,
     rgba(42, 42, 42, 0) 48%,
-    rgba(42, 42, 42, 0) 95%,
-    #706f70f3 100%
-  ); */
+    rgba(42, 42, 42, 0) 85%,
+    #706f70 100%
+  );
 }
 
 .bg-wrapper {
   background: rgb(42, 42, 42);
-  background: linear-gradient(
-    0deg,
-    #2a2a2a 0%,
-    #2a2a2a 48%,
-    #2a2a2a 60%,
-    #505050 100%,
-    #727071 100%,
-    #706f70f3 100%
-  );
+  background: linear-gradient(0deg, #2a2a2a 60%, #706f70 100%);
 
   /* background: rgb(31,31,31);
 background: linear-gradient(0deg, rgba(31,31,31,1) 0%, rgba(12, 11, 11, 0.609) 76%); */
