--- a/style.css
+++ b/style.css
@@ -451,7 +451,7 @@ button.btn.bg-black {
   margin-right: 25px;
 }
 
-@import url("https://fonts.googleapis.com/css?family=Montserrat");
+/* @import url("https://fonts.googleapis.com/css?family=Montserrat");
 
 h3 {
   background-image: url(https://media.giphy.com/media/26BROrSHlmyzzHf3i/giphy.gif);
@@ -461,7 +461,7 @@ h3 {
   -webkit-background-clip: text;
   text-transform: uppercase;
   font-size: 50px;
-}
+} */
 
 .music-play-btn{
   width: 60px;
