--- a/genres/genres.css
+++ b/genres/genres.css
@@ -85,3 +85,13 @@ div.hp-card {
 div h5.hp-card-title {
     font-size: 1.4em;
 }
+
+.modal-backdrop-show {
+    opacity: 0.8;
+}
+
+.modal-backdrop {
+    width: 200px;
+    height: 250px;
+    background-color: rgb(36, 27, 90);
+}
