Fixed Album Page

--- a/albums/album-style.css
+++ b/albums/album-style.css
@@ -8,26 +8,26 @@
 }
 
 .bg-wrapper {
-  background: rgb(206, 132, 120);
+  /* background: rgb(206, 132, 120);
   background: linear-gradient(
     180deg,
     rgba(206, 132, 120, 1) 0%,
     rgba(206, 132, 120, 1) 5%,
     rgba(42, 42, 42, 1) 20%
-  );
+  ); */
 }
 
 #album-header-container {
   height: 250px;
   padding-top: 30px;
   transform: scaleY(1.2);
-  background: rgb(206, 132, 120);
+  /* background: rgb(206, 132, 120);
   background: linear-gradient(
     180deg,
     rgb(221, 157, 147) 0%,
     rgba(206, 132, 120, 1) 55%,
     rgba(206, 132, 120, 1) 88%
-  );
+  ); */
 }
 
 .album-img {
@@ -75,7 +75,7 @@
 }
 
 #album-songs-container {
-  padding-top: 90px;
+  padding-top: 30px;
 }
 
 /* * {
@@ -111,7 +111,7 @@
 
 /* music API controls */
 
-.music-play-btn{
+.music-play-btn {
   width: 60px;
   height: 48px;
 }
